fix overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -31,8 +31,8 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
-
 
 body {
   @apply bg-darkBrown
